editing external CSS file

--- a/responsive.css
+++ b/responsive.css
@@ -2,3 +2,23 @@ h1 {
     color:rgb(22, 126, 223);
     text-align: left;
 }
+
+ul {
+    color:rgb(8, 16, 22);
+    text-align: left;
+}
+
+p {
+    color:rgb(8, 16, 22);
+    text-align: left;
+}
+
+body {
+    color:rgb(8, 16, 22);
+    text-align: left;
+}
+
+head {
+    color:rgb(8, 16, 22);
+    text-align: left;
+}
